[package]
name = "carillon"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@as207960.net>"]

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
openssl = "0.10.55"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
diesel = { version = "2.1.0", features = ["uuid"] }
diesel-async = { version = "0.3.1", features = ["postgres", "mobc"] }
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
openssl-sys = "0.9.90"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
foreign-types-shared = "0.1"
mobc = "0.8.1"
async-recursion = "1.0.4"
